# mintlayer-core-primitives

./: .gitignore  Cargo.toml  LICENSE  README.md  do_checks.sh  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  code_checks.yml
build-tools/cargo-info-extractor/: extract.py
build-tools/codecheck/: codecheck.py
src/: accounts.rs  coin_type.rs  crypto.rs  destination.rs  id.rs  lib.rs  misc.rs  sighash_input_commitment.rs  tokens.rs  tx_input.rs  tx_output.rs  utxo_outpoint.rs
src/tests/: mod.rs  utils.rs
